root namespace is now called StateOfClone ListPool class is now part of the Core namespace and assembly structural classes and definitions for GameMap now live in their own Structures folder

--- a/Assets/Scripts/Core/Core.asmdef
+++ b/Assets/Scripts/Core/Core.asmdef
@@ -1,9 +1,7 @@
 {
-    "name": "GameMap",
-    "rootNamespace": "StateOfClone.GameMap",
-    "references": [
-        "GUID:9273c36cbff67ef4bb16d6eba10e674f"
-    ],
+    "name": "Core",
+    "rootNamespace": "StateOfClone.Core",
+    "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
