--- a/Assets/Scripts/Units/Units.asmdef
+++ b/Assets/Scripts/Units/Units.asmdef
@@ -2,7 +2,8 @@
     "name": "Units",
     "rootNamespace": "StateOfClone.Units",
     "references": [
-        "GUID:9273c36cbff67ef4bb16d6eba10e674f"
+        "GUID:9273c36cbff67ef4bb16d6eba10e674f",
+        "GUID:75469ad4d38634e559750d17036d5f7c"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
