Steerings are no longer components; VS COde extension update
- updated Unity Visual Code Editor package to work with the newest Unity extension for VS Code, as well as added/removed the relevant extensions in VS Code
- added a factory to produce SteeringBehaviors
- behaviors can now be selected on a unit in Inspector

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,5 +55,6 @@
     "editor.formatOnPaste": true,
     "editor.formatOnSave": true,
     "editor.formatOnSaveMode": "modifications",
-    "editor.formatOnType": true
+    "editor.formatOnType": true,
+    "dotnet.defaultSolution": "StateOfClone.sln"
 }
